--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ ModuleCache.noindex
 info.plist
 **.zip
 fastlane/report.xml
+.swiftpm/config/registries.json
+.swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
